--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMFYGDdt8OVM0+kaqcfhvN6",
+      "authorship_tag": "ABX9TyOcwRjm8ZqnQhBse68u7kR+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,18 +73,20 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "a = 10\n",
+        "b = 5\n",
+        "c = 7\n",
+        "d = 9\n",
+        "\n",
+        "if (a > b and c < d) T\n",
+        "      T           T\n",
+        "if (a < b or c < d)\n",
+        "      F         T"
+      ],
       "metadata": {
+        "collapsed": true,
         "id": "EOOUxG6Skcdy"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Gt7N6sU7kcya"
       },
       "execution_count": null,
       "outputs": []
